# Fennec

./: Dockerfile  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_freesound.yml  parameters_mfcc.yml
docker/: Dockerfile  docker-compose.yml
mlflow-db/: mlflow.db
notebooks/: data_description.ipynb  feature_engineering.ipynb  model_inference.ipynb
src/fennec/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/fennec/datasets/: TensorDataset.py  customwavedataset.py  numpyDataset.py  torch_model.py
src/fennec/pipelines/freesound/: __init__.py  dataloader.py  lightning_modules .py  model.py  nodes.py  pipeline.py  utils.py
src/fennec/pipelines/mfcc/: __init__.py  nodes.py  pipeline.py  utils.py
tests/pipelines/freesound/: test_pipeline.py
tests/pipelines/mfcc/: test_pipeline.py
